# edge-cdn-store

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md
design/: architecture_diagrams.md  bench_proposal.md  next.md  proposal.md  requirement.md
examples/: cdn_server.rs  pingora.yaml
src/: config.rs  lib.rs  prototype.rs
tests/: capacity_tests.rs  config_tests.rs  integration_test.rs  integration_uring_test.rs  storage_smoke.rs
tests/resources/: full.yaml  partial.yaml  unknown.yaml
