[package]
name = "edge-cdn-store"
version = "0.1.0"
edition = "2024"
description = "A Pingora cache Storage backend with streaming partial writes and disk persistence."
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["pingora", "cache", "cdn", "storage", "io_uring"]
categories = ["caching", "web-programming", "asynchronous"]
repository = "https://github.com/PixmaNts/edge-cdn-store"
homepage = "https://github.com/PixmaNts/edge-cdn-store"

[dependencies]
pingora = { version = "0.6.0", features = ["cache", "proxy"] }
tokio = { version = "1.47.1", features = ["full"] }
dashmap = "6.1.0"
async-trait = "0.1.83"
bytes = "1.8.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
io-uring = "0.7"
prometheus = "0.13"
once_cell = "1.21"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
once_cell = "1.21.3"
